<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B87A44"
    android:padding="24dp">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_image"
        android:layout_marginBottom="12dp"/>

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="375dp"
        android:layout_height="375dp"
        android:src="@drawable/ic_book_girl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title"
        app:layout_constraintBottom_toTopOf="@id/main_description"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/main_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/main_description"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/btn_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_image" />

    <Button
        android:id="@+id/btn_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_started"
        android:textColor="#FFFFFF"
        android:backgroundTint="#4E4E4E"
        android:textStyle="bold"
        android:padding="12dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>